<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_detect"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="268dp"
        android:text="@string/detect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="28dp"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:text="@string/text_title"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/text_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/sw_bg_action"
        android:layout_width="256dp"
        android:layout_height="32dp"
        android:layout_marginBottom="128dp"
        android:showText="true"
        android:text="@string/sw_bg_action"
        android:textColorHint="#000000"
        android:textOff="@string/sw_text_close"
        android:textOn="@string/sw_text_open"
        android:textSize="24sp"
        android:thumb="@drawable/sw_thumb"
        android:track="@drawable/sw_track"
        app:layout_constraintBottom_toTopOf="@+id/text_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_setting"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gear"
        android:background="#ffffffff"
        android:contentDescription="@string/setting" />

    <ImageButton
        android:id="@+id/btn_log"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="#ffffffff"
        android:contentDescription="@string/setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu" />

</androidx.constraintlayout.widget.ConstraintLayout>